force-app/main/default/objects/Funding_Award_Requirement__c/Funding_Award_Requirement__c.object-meta.xml
<CustomObject>
    <label>Funding Award Requirement</label>
    <pluralLabel>Funding Award Requirements</pluralLabel>
    <description>Requirements per funding opportunity (budget limits, eligibility, compliance)</description>
    <nameField>
        <label>Requirement Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>