force-app/main/default/objects/Funding_Award_Requirement__c/fields/Funding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opportunity__c</fullName>
    <label>Funding Opportunity</label>
    <type>MasterDetail</type>
    <referenceTo>Funding_Opportunity__c</referenceTo>
    <relationshipLabel>Funding Award Requirements</relationshipLabel>
    <relationshipName>Funding_Award_Requirements</relationshipName>
</CustomField>