force-app/main/default/objects/Funding_Award_Requirement__c/fields/Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Name__c</fullName>
    <label>Requirement Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>