force-app/main/default/objects/Funding_Award_Requirement__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>budget</fullName><label>Budget</label><default>false</default></value>
            <value><fullName>narrative</fullName><label>Narrative</label><default>false</default></value>
            <value><fullName>eligibility</fullName><label>Eligibility</label><default>false</default></value>
            <value><fullName>compliance</fullName><label>Compliance</label><default>false</default></value>
            <value><fullName>submission</fullName><label>Submission</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>