force-app/main/default/objects/Funding_Award_Requirement__c/fields/Requirement_Value__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Value__c</fullName>
    <label>Requirement Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>